--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -6,7 +6,7 @@
 
 $primary-font: 'Changa', sans-serif;
 $secondary-font: 'Open Sans', sans-serif;
-$primary-color: #E51515;
+$primary-color: #3fe619;
 $secondary-color: #14151A;
 $date-color: #FFB320;
 $comment-color:#08ABBD;
